--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -8,6 +8,10 @@
 			<li>/file/sample.html -- returns the content of the file sample.html</li>
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
+			<li>/party? -- returns a page with the desired background and text color</a></li>
+			<li>/party? -- accessible colors: red, green, blue, yellow, orange, pink, purple</li>
+			<li>http://35.91.156.22:9000/party?bgr=pink&txt=orange</li>
+			<li>http://35.91.156.22:9000/party?bgr=red&txt=blue</li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
