--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -12,6 +12,10 @@
 			<li>/party? -- accessible colors: red, green, blue, yellow, orange, pink, purple</li>
 			<li>http://35.91.156.22:9000/party?bgr=pink&txt=orange</li>
 			<li>http://35.91.156.22:9000/party?bgr=red&txt=blue</li>
+			<li>/shapes? -- returns a page with the desired shape with desired dimensions</a></li>
+			<li>/shapes? -- accessible shapes: square, circle, triangle</li>
+			<li>http://35.91.156.22:9000/shapes?shape=triangle&size=150</li>
+			<li>http://35.91.156.22:9000/shapes?shape=circle&size=200</li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
